Update styles across components to utilize custom dark color scheme for improved visual consistency, including changes to buttons, backgrounds, and text colors in forms, portfolio items, skills, and timeline items.

--- a/public/__forms.html
+++ b/public/__forms.html
@@ -36,7 +36,7 @@
             />
             <button
                 type="submit"
-                className="cursor-pointer inline-block px-12 py-3 w-max text-base font-medium rounded-md mx-auto text-white dark:text-stone-900 bg-stone-900 dark:bg-white"
+                className="cursor-pointer inline-block px-12 py-3 w-max text-base font-medium rounded-md mx-auto text-white dark:text-custom-dark bg-custom-dark dark:bg-white"
             >
                 Get in touch
             </button>
